Fix broken scrollbar styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,6 +87,7 @@
 
 	*::-webkit-scrollbar {
 		@apply w-4;
+		@apply bg-base-300;
 	}
 
 	*::-webkit-scrollbar-thumb {
@@ -94,7 +95,8 @@
 		/* Use transparent border as margin/padding is not supported for scrollbar components */
 		border: 6px transparent solid;
 		/* Set background color using box-shadow because background doesn't work with above hack */
-		box-shadow: inset 0 -1px 1px #000a, inset 0 0 99px var(--pc-fallback);
+		/* var(--pc-fallback) is not defined here for some reason, so the color is hardcoded  */
+		box-shadow: inset 0 -1px 1px #000a, inset 0 0 99px #2DD4BF;
 	}
 }
 
